--- a/src/app/trello/home/home.component.html
+++ b/src/app/trello/home/home.component.html
@@ -1,1 +1,102 @@
-<p>home works!</p>
+<div class="wrapper">
+  <!-- Sidebar  -->
+  <nav id="sidebar">
+    <div class="sidebar-header">
+      <h3>Bootstrap Sidebar</h3>
+    </div>
+
+    <ul class="list-unstyled components">
+      <li>
+        <a href="#">Trang chủ</a>
+      </li>
+      <li class="active">
+        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Bảng</a>
+        <ul class="collapse list-unstyled" id="homeSubmenu">
+          <li>
+            <a href="#">Home 1</a>
+          </li>
+          <li>
+            <a href="#">Home 2</a>
+          </li>
+          <li>
+            <a href="#">Home 3</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Nhóm</a>
+        <ul class="collapse list-unstyled" id="pageSubmenu">
+          <li>
+            <a href="#sub1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Page 1</a>
+            <ul class="collapse list-unstyled" id="sub1">
+              <li></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">Page 2</a>
+          </li>
+          <li>
+            <a href="#">Page 3</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    Dự án C0421K1 <br>
+    Dự án CodeGym
+  </nav>
+
+  <!-- Page Content  -->
+  <div id="content">
+    <h2>Các bảng của bạn</h2>
+    <div class="section-board">
+      <div class="mat-card">
+        <div class="mat-card-title">123</div>
+        <div class="mat-card-content">
+          AAA
+        </div>
+      </div>
+      <div class="mat-card">
+        <div class="mat-card-title">123</div>
+        <div class="mat-card-content">
+          AAA
+        </div>
+      </div>
+      <div class="mat-card">
+        <div class="mat-card-title">123</div>
+        <div class="mat-card-content">
+          AAA
+        </div>
+      </div>
+      <div class="mat-card">
+        <div class="mat-card-title">123</div>
+        <div class="mat-card-content">
+          AAA
+        </div>
+      </div>
+
+    </div>
+    <div class="line"></div>
+
+    <h2>Bảng được chia sẻ với bạn</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <div class="line"></div>
+
+    <h2>Nhóm của bạn</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <div class="line"></div>
+
+    <h2>Nhóm được chia sẻ với bạn</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+</div>
