--- a/src/app/trello/home/home.component.html
+++ b/src/app/trello/home/home.component.html
@@ -1,5 +1,4 @@
 <div class="wrapper">
-  <!-- Sidebar  -->
   <nav id="sidebar">
     <div class="sidebar-header">
       <h3>Bootstrap Sidebar</h3>
@@ -44,59 +43,110 @@
     Dự án C0421K1 <br>
     Dự án CodeGym
   </nav>
+    <div>
+      <h2>Các bảng của bạn</h2>
+      <div class="section-board">
+        <div class="mat-card">
+          <div class="mat-card-title">Bảng 1</div>
+          <div class="mat-card-content">
+            Chủ sở hữu: Không
+          </div>
+        </div>        <div class="mat-card">
+          <div class="mat-card-title">Bảng 2</div>
+          <div class="mat-card-content">
+            Chủ sở hữu: Không
+          </div>
+        </div>        <div class="mat-card">
+          <div class="mat-card-title">Bảng 3</div>
+          <div class="mat-card-content">
+            Chủ sở hữu: Không
+          </div>
+        </div>        <div class="mat-card">
+          <div class="mat-card-title">Bảng 4</div>
+          <div class="mat-card-content">
+            Chủ sở hữu: Không
+          </div>
+        </div>
+      </div>
+      <div class="line"></div>
 
-  <!-- Page Content  -->
-  <div id="content">
-    <h2>Các bảng của bạn</h2>
-    <div class="section-board">
-      <div class="mat-card">
-        <div class="mat-card-title">123</div>
+      <h2>Bảng được chia sẻ với bạn</h2>
+      <div class="section-board">
+        <div class="mat-card">
+          <div class="mat-card-title">Bảng 1</div>
+          <div class="mat-card-content">
+            Chủ sở hữu: Không
+          </div>
+        </div>        <div class="mat-card">
+        <div class="mat-card-title">Bảng 2</div>
         <div class="mat-card-content">
-          AAA
+          Chủ sở hữu: Không
+        </div>
+      </div>        <div class="mat-card">
+        <div class="mat-card-title">Bảng 3</div>
+        <div class="mat-card-content">
+          Chủ sở hữu: Không
+        </div>
+      </div>        <div class="mat-card">
+        <div class="mat-card-title">Bảng 4</div>
+        <div class="mat-card-content">
+          Chủ sở hữu: Không
         </div>
       </div>
-      <div class="mat-card">
-        <div class="mat-card-title">123</div>
-        <div class="mat-card-content">
-          AAA
-        </div>
-      </div>
-      <div class="mat-card">
-        <div class="mat-card-title">123</div>
-        <div class="mat-card-content">
-          AAA
-        </div>
-      </div>
-      <div class="mat-card">
-        <div class="mat-card-title">123</div>
-        <div class="mat-card-content">
-          AAA
-        </div>
       </div>
 
+      <div class="line"></div>
+
+      <h2>Nhóm của bạn</h2>
+      <div class="section-board">
+        <div class="mat-card">
+          <div class="mat-card-title">Bảng 1</div>
+          <div class="mat-card-content">
+            Chủ sở hữu: Không
+          </div>
+        </div>        <div class="mat-card">
+        <div class="mat-card-title">Bảng 2</div>
+        <div class="mat-card-content">
+          Chủ sở hữu: Không
+        </div>
+      </div>        <div class="mat-card">
+        <div class="mat-card-title">Bảng 3</div>
+        <div class="mat-card-content">
+          Chủ sở hữu: Không
+        </div>
+      </div>        <div class="mat-card">
+        <div class="mat-card-title">Bảng 4</div>
+        <div class="mat-card-content">
+          Chủ sở hữu: Không
+        </div>
+      </div>
+      </div>
+
+      <div class="line"></div>
+
+      <h2>Nhóm được chia sẻ với bạn</h2>
+      <div class="section-board">
+        <div class="mat-card">
+          <div class="mat-card-title">Bảng 1</div>
+          <div class="mat-card-content">
+            Chủ sở hữu: Không
+          </div>
+        </div>        <div class="mat-card">
+        <div class="mat-card-title">Bảng 2</div>
+        <div class="mat-card-content">
+          Chủ sở hữu: Không
+        </div>
+      </div>        <div class="mat-card">
+        <div class="mat-card-title">Bảng 3</div>
+        <div class="mat-card-content">
+          Chủ sở hữu: Không
+        </div>
+      </div>        <div class="mat-card">
+        <div class="mat-card-title">Bảng 4</div>
+        <div class="mat-card-content">
+          Chủ sở hữu: Không
+        </div>
+      </div>
+      </div>
     </div>
-    <div class="line"></div>
-
-    <h2>Bảng được chia sẻ với bạn</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    <div class="line"></div>
-
-    <h2>Nhóm của bạn</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    <div class="line"></div>
-
-    <h2>Nhóm được chia sẻ với bạn</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
 </div>
