--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,41 @@
-<p>login works!</p>
+<div class="container">
+  <div class="form-container sign-in-container">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <h1>Đăng Nhập</h1>
+      <div class="form-group">
+        <input type="text" formControlName="username" placeholder="username">
+        <div class="text-danger" *ngFor="let validation of validation_message.username">
+          <div
+            *ngIf="loginForm.get('username')?.hasError(validation.type) && (loginForm.get('username')?.touched || loginForm.get('username')?.dirty)">
+            {{validation.message}}
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <input [type]="show ? 'text':'password'" formControlName="password" placeholder="password">
+        <div class="text-danger" *ngFor="let validation of validation_message.password">
+          <div
+            *ngIf="loginForm.get('password')?.hasError(validation.type) && (loginForm.get('password')?.touched||loginForm.get('password')?.dirty)">
+            {{validation.message}}
+          </div>
+          <label><input type="checkbox" (click)="showPassword()">Hiện mật khẩu</label>
+        </div>
+        <a href="#">Quên mật khẩu</a>
+        <div class="form-group">
+          <button class="btn btn-primary" type="submit">
+            Đăng nhập
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="overlay-container">
+    <div class="overlay">
+      <div class="overlay-panel overlay-right">
+        <h1>Chưa có tài khoản?</h1>
+        <p>Bấm đăng ký ngay thôi</p>
+        <button type="submit" class="ghost">Đăng ký</button>
+      </div>
+    </div>
+  </div>
+</div>
