--- a/src/app/trello/home/home.component.css
+++ b/src/app/trello/home/home.component.css
@@ -1,21 +1,3 @@
-/*
-    DEMO STYLE
-*/
-
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
-body {
-  font-family: 'Poppins', sans-serif;
-  background: #fafafa;
-}
-
-p {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.1em;
-  font-weight: 300;
-  line-height: 1.7em;
-  color: #999;
-}
 
 a,
 a:hover,
@@ -55,6 +37,7 @@ a:focus {
   display: flex;
   width: 100%;
   align-items: stretch;
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 }
 
 #sidebar {
@@ -181,4 +164,248 @@ a.article:hover {
   width: 255px;
   margin: 20px;
   height: 150px;
+}
+.root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.icon-item {
+  list-style: none
+}
+
+.img-circle {
+  margin-top: 3px;
+  height: 33px;
+  width: 33px;
+  clip-path: circle(50%);
+}
+
+.icon-link {
+  display: inline-flex;
+  font-size: 25px;
+  text-decoration: none;
+  width: 40px;
+  height: 40px;
+  transition: 0.5s linear;
+  position: relative;
+  z-index: 1;
+  margin: auto;
+}
+
+.icon-link:hover {
+  color: #fff;
+}
+
+.icon-link i {
+  margin: auto;
+}
+
+.fa-plus {
+  margin: 9px auto auto;
+}
+
+.fa-bell {
+  margin: 9px auto auto;
+}
+
+.fa-bars {
+  font-size: 22px;
+  margin: 12px auto auto;
+}
+
+.fa-home {
+  font-size: 22px;
+  margin: 12px auto auto;
+}
+
+.fa-board {
+  font-size: 20px;
+  margin: 11px 5px 5px;
+}
+
+.board-header {
+  display: flex;
+  margin: inherit;
+}
+
+.nav {
+  background: #ffffff;
+  display: flex;
+  margin: inherit;
+}
+
+.nav-brand-start {
+  display: flex;
+  justify-content: flex-start;
+  height: 40px;
+  margin: auto auto auto;
+}
+
+.nav-brand-end {
+  margin-left: 1100px;
+  display: flex;
+  justify-content: flex-end;
+  height: 40px;
+  text-decoration: none;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: none;
+  color: #ffffff;
+  font-weight: bold;
+  line-height: 32px;
+  padding: 0;
+  white-space: nowrap;
+}
+
+.nav-content {
+  display: inline-block;
+  flex-shrink: 0;
+  line-height: 1;
+}
+
+.nav-item {
+  display: flex;
+  width: 32px;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  height: 40px;
+}
+
+h1.app-name {
+  padding: 4px;
+}
+
+.app-name {
+  font-size: 20px;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+}
+
+.has-gradient-text {
+  background: -webkit-linear-gradient(#ffffff, #efd0d0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+.board {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  height: 210%;
+min-width: 0;
+  min-height: 0;}
+
+.board-wrapper {
+  display: flex;
+  flex-grow: 1;
+  overflow-x: auto;}
+
+.board-columns {
+  display: flex;
+  flex-grow: 1;}
+
+.board-column {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-basis: 0;
+min-width: 300px;
+  margin: 50px;
+  padding: 25px;
+
+  border-radius: 4px;
+
+  background: #ffffff;}
+
+:not(:first-child) {
+   margin-left: 0;
+ }
+
+.column-title {
+  color: #523535;
+  font-size: 15px;
+  font-weight: 800;
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.task {
+  display: flex;
+  padding: 18px 12px;
+  background: #ffffff;
+  border-bottom: solid 1px #ffffff;
+  border-radius: 4px;
+  margin-bottom: 15px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.08),
+  0 3px 14px 2px rgba(0, 0, 0, 0.05);
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.tasks-container.cdk-drop-list-dragging .task:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.icon-board {
+  background-color: #4c94be;
+  border-radius: 0.3rem;
+  transition: background-color 150ms;
+}
+
+.section-board {
+  width: 80rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main-content {
+  justify-content: space-between;
+  align-content: space-around;
+  height: auto;
+  margin: auto;
+}
+
+.card {
+  width: 255px;
+  margin: 20px;
+  height: 150px;
+}
+
+.title-board {
+  margin-top: 30px;
+  margin-left: 35px;
+  font-size: 22px;
+}
+
+.fa-briefcase, .fa-clipboard {
+  margin-right: 5px;
+}
+
+.fa-plus-circle{
+  font-size: 50px;
+  margin-top: 30px;
+}
+
+.img-circle-add-board{
+  margin: inherit;
+  text-align: center;
 }
