--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
 
-html, body {
-  height: 100%;
-}
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Lato:400,800,900');
+@import url(https://fonts.googleapis.com/css?family=Courgette);
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+html, body {
+  height: auto;
+}
+
+html{
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 }
