--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -3,7 +3,6 @@
 }
 
 body {
-  background: #f6f5f7;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,7 +86,7 @@ input {
 }
 
 .container {
-  background-color: #fff;
+  background-image: linear-gradient(to top, #fff1eb 0%, #6d7fcc 100%);
   border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
   0 10px 10px rgba(0, 0, 0, 0.22);
