--- a/src/app/share/modal/modal.component.html
+++ b/src/app/share/modal/modal.component.html
@@ -1,33 +1,41 @@
-<!--<div *ngIf="modalService.isActive" class="modal is-active">-->
-<!--  <div class="modal-background" (click)="modalService.close()"></div>-->
-<!--  <div class="modal-card">-->
-<!--    <header class="modal-card-head">-->
-<!--      <p class="modal-card-title">Creating new board</p>-->
-<!--      <button class="delete" aria-label="close" (click)="modalService.close()"></button>-->
-<!--    </header>-->
-<!--    <section class="modal-card-body">-->
-<!--      <div class="field" style="position: relative">-->
-<!--        <label class="label">Title</label>-->
-<!--        <div class="control">-->
-<!--          <input class="input" type="text" required [(ngModel)]="board.title" #boardTitle="ngModel">-->
-<!--        </div>-->
-<!--        <div *ngIf="boardTitle.invalid"-->
-<!--             class="alert" style="position: absolute; top: 0px; left: 50px">-->
-<!--          <div *ngIf="boardTitle.errors?.required">-->
-<!--            Title is required.-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="field columns">-->
-<!--        <div class="column is-one-fifth">-->
-<!--          <label class="label">Owner</label>-->
-<!--          <div class="control">-->
-<!--            <div class="button is-info user-button  is-light">{{modalService.currentUser.username}}</div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="column">-->
-<!--          <label class="label">Current members</label>-->
-<!--          <p *ngIf="!members.length" class="help">No members yet!</p>-->
+<div *ngIf="modalService.isActived" class="modal is-active">
+  <div class="modal-background" (click)="modalService.close()"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">Creating new board</p>
+      <button class="delete" aria-label="close" (click)="modalService.close()"></button>
+    </header>
+    <section class="modal-card-body">
+      <div class="field columns" style="position: relative">
+        <label class="label">Title</label>
+        <div class="control">
+          <input class="input" type="text" required [(ngModel)]="newBoard.title" #boardTitle="ngModel">
+        </div>
+        <div *ngIf="boardTitle.invalid && boardTitle.touched" class="alert">
+          <div *ngIf="boardTitle.errors?.required">Title is required.</div>
+        </div>
+      </div>
+      <br>
+      <div class="field columns">
+        <label class="label">Type</label>
+        <div class="control">
+          <select class="select" [(ngModel)]="newBoard.status">
+            <option value="Private">Private</option>
+<!--            <option value="Group">Group</option>-->
+            <option value="Public">Public</option>
+          </select>
+        </div>
+      </div>
+      <div class="field columns">
+        <div class="column is-one-fifth">
+          <label class="label">Owner</label>
+          <div class="control">
+            <div class="button is-info user-button is-light">A</div>
+          </div>
+        </div>
+<!--        <div class="column" *ngIf="newBoard.status != 'Private'">-->
+<!--          <label class="label" >Current members</label>-->
+<!--          <p  class="help">No members yet!</p>-->
 <!--          <div class="control">-->
 <!--            <div class="button is-info user-button member-button is-light"-->
 <!--                 *ngFor="let member of members; index as i" (click)="removeMember(i)">-->
@@ -36,34 +44,30 @@
 <!--          </div>-->
 <!--        </div>-->
 <!--      </div>-->
-<!--      <div class="field">-->
+<!--      <div class="field" *ngIf="newBoard.status != 'Private'">-->
 <!--        <label class="label">Add member</label>-->
 <!--        <div class="control">-->
 <!--          <input class="input" type="text" (keyup)="searchUsers()" [(ngModel)]="userSearch">-->
 <!--        </div>-->
-<!--      </div>-->
-<!--    </section>-->
-<!--    <footer class="modal-card-foot">-->
-<!--      <div *ngIf="boardTitle.invalid" class="alert">-->
-<!--        <button class="button is-dark is-light" disabled>Save changes</button>-->
-<!--      </div>-->
-<!--      <div *ngIf="!boardTitle.invalid" class="alert">-->
-<!--        <button class="button is-success is-light" (click)="createNewBoard()">Save changes</button>-->
-<!--      </div>-->
-<!--      <button class="button is-light" (click)="modalService.close()">Cancel</button>-->
-<!--    </footer>-->
-<!--  </div>-->
+      </div>
+    </section>
+    <footer class="modal-card-foot">
+      <div *ngIf="boardTitle.invalid" class="alert">
+        <button class="button is-dark is-light" disabled>Save changes</button>
+      </div>
+      <div *ngIf="!boardTitle.invalid" class="alert">
+        <button class="button is-success is-light" (click)="createNewBoard()">Save changes</button>
+      </div>
+      <button class="button is-light" (click)="modalService.close()">Cancel</button>
+    </footer>
+  </div>
 <!--  <div style="position: relative;">-->
 <!--    <div style="position: absolute; top: -100px; left: -300px">-->
 <!--      <div *ngIf="userResult.length" class="dropdown-content">-->
 <!--        <a *ngFor="let result of userResult" class="dropdown-item" (click)="addMember(result)">-->
-<!--          &lt;!&ndash;          <figure class="image is-48x48">&ndash;&gt;-->
-<!--          &lt;!&ndash;            <img *ngIf="!result.image" src="assets/img/nicki-eliza.jpg" class="is-rounded">&ndash;&gt;-->
-<!--          &lt;!&ndash;            <img *ngIf="result.image" [src]="result.image" class="is-rounded">&ndash;&gt;-->
-<!--          &lt;!&ndash;          </figure>&ndash;&gt;-->
 <!--          @{{result.username}} <span *ngIf="result.nickname">({{result.nickname}})</span>-->
 <!--        </a>-->
 <!--      </div>-->
 <!--    </div>-->
 <!--  </div>-->
-<!--</div>-->
+</div>
