--- a/src/styles.css
+++ b/src/styles.css
@@ -12,5 +12,5 @@ html, body {
 }
 
 html{
-  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+  background-image: linear-gradient(to top, #fff1eb 0%, #6d7fcc 100%);
 }
