--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+<div class="root">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+  <app-modal></app-modal>
+</div>
 
-<!--<app-nav-bar></app-nav-bar>-->
-<router-outlet></router-outlet>
-<app-modal></app-modal>
