--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Lato:400,800,900');
+@import url(https://fonts.googleapis.com/css?family=Courgette);
+@import "../node_modules/bulma/bulma.sass";
 html, body {
   height: 100%;
 }
-
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Lato:400,800,900');
-@import url(https://fonts.googleapis.com/css?family=Courgette);
 
 body {
   margin: 0;
