--- a/src/app/share/side-bar/side-bar/side-bar.component.html
+++ b/src/app/share/side-bar/side-bar/side-bar.component.html
@@ -2,16 +2,21 @@
   <div class="sidebar-header">
   </div>
   <ul class="list-group">
-    <li class="list-group-item"><a href="#">Home</a></li>
+    <li class="list-group-item">
+      <a [routerLink]="['']">Home</a></li>
     <li>
       <div class="collapse">
         <a [routerLink]="['/board']">Board</a>
       </div>
     </li>
-    <li class="list-group-item"><a href="#">Group</a></li>
-    <li class="list-group-item">A fourth item</li>
-    <li class="list-group-item">And a fifth one</li>
+    <li class="list-group-item">
+      <a [routerLink]="['']">Group</a></li>
+<!--    <li class="list-group-item">A fourth item</li>-->
+<!--    <li class="list-group-item">And a fifth one</li>-->
   </ul>
+  <br>
+  <br>
   Dự án C0421K1 <br>
   Dự án CodeGym
 </nav>
+
