--- a/src/app/trello/boards/boards.component.html
+++ b/src/app/trello/boards/boards.component.html
@@ -11,12 +11,12 @@
           <a (click)="displayAddBoardModal()"><i class="fas fa-plus-circle"></i></a>
         </div>
       </div>
-      <div class="card">
-        <div class="card-header"><p class="card-header-title">A</p></div>
+      <div class="card" *ngFor="let board of boards" routerLink="/trello/boards/{{board.id}}">
+        <div class="card-header"><p class="card-header-title">{{board.title}}</p></div>
         <div class="card-content">
           <div class="content">
-            <span style="font-size: small"><b>Id: </b>B</span> <br>
-            <span style="font-size: small"><b>Owner: </b>CC</span>
+            <span style="font-size: small"><b>Type: </b>{{board.type}}</span> <br>
+            <span style="font-size: small"><b>Owner: </b>{{board.owner.username}}</span>
           </div>
         </div>
       </div>
@@ -37,26 +37,33 @@
       </div>
     </div>
 
-    <!--    Work Space-->
     <div class="title-board" #target>
       <h1><i class="far fa-clipboard"></i>Bảng công khai</h1>
     </div>
     <div class="section-board">
-      <div class="card">
-        <div class="img-circle-add-board">
-          <a><i class="fas fa-plus-circle"></i></a>
-        </div>
-      </div>
-      <div>
-        <div class="card">
-          <div class="card-header"><p class="card-header-title">A</p></div>
-          <div class="card-content">
-            <span style="font-size: small"><b>Id: </b>F</span> <br>
-            <span style="font-size: small"><b>Owner: </b>R</span>
+      <div class="card" *ngFor="let board of publicBoards" routerLink="/trello/boards/{{board.id}}">
+        <div class="card-header"><p class="card-header-title">{{board.title}}</p></div>
+        <div class="card-content">
+          <div class="content">
+            <span style="font-size: small"><b>Type: </b>{{board.type}}</span> <br>
+            <span style="font-size: small"><b>Owner: </b>{{board.owner.username}}</span>
           </div>
         </div>
       </div>
-
+    </div>
+    <div class="title-board" #target>
+      <h1><i class="far fa-clipboard"></i>Bảng riêng tư</h1>
+    </div>
+    <div class="section-board">
+      <div class="card" *ngFor="let board of privateBoards" routerLink="/trello/boards/{{board.id}}">
+        <div class="card-header"><p class="card-header-title">{{board.title}}</p></div>
+        <div class="card-content">
+          <div class="content">
+            <span style="font-size: small"><b>Type: </b>{{board.type}}</span> <br>
+            <span style="font-size: small"><b>Owner: </b>{{board.owner.username}}</span>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
