--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,7 +36,7 @@
       <div class="overlay-panel overlay-right">
         <h1>Chưa có tài khoản?</h1>
         <p>Bấm đăng ký ngay thôi</p>
-        <button type="submit" class="ghost">Đăng ký</button>
+        <button type="submit" class="ghost" routerLink="/register">Đăng ký</button>
       </div>
     </div>
   </div>
