--- a/src/app/share/side-bar/side-bar/side-bar.component.html
+++ b/src/app/share/side-bar/side-bar/side-bar.component.html
@@ -6,7 +6,7 @@
       <a [routerLink]="['']">Home</a></li>
     <li>
       <div class="collapse">
-        <a [routerLink]="['/board']">Board</a>
+        <a [routerLink]="['/boards']">Board</a>
       </div>
     </li>
     <li class="list-group-item">
