--- a/src/app/trello/board-view/board-view.component.html
+++ b/src/app/trello/board-view/board-view.component.html
@@ -15,7 +15,7 @@
             </div>
             <div class="column-title" >
               <input class="input title-column" type="text"
-                     (keydown)="onKeydown($event, column)"
+                     (focusout)="onFocusOut(column)"
                      [(ngModel)]="this.currentBoard.columns[i].title"
                      value="{{column.title}}">
             </div>
@@ -77,5 +77,22 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="modal" id="deleteColumnModal">
+  <div class="modal-background"></div>
+  <div class="modal-card" style="width: 500px; height: 215px;">
+    <header class="modal-card-head">
+      <p class="modal-card-title">Delete</p>
+      <button class="delete" aria-label="close" (click)="closeDeleteColumnModal()"></button>
+    </header>
+    <section class="modal-card-body">
+      Do you want to delete this Column?
+    </section>
+    <footer class="modal-card-foot">
+      <button class="button is-danger is-light" (click)="deleteColumn()">Delete</button>
+      <button class="button is-light" (click)="closeDeleteColumnModal()">Cancel</button>
+    </footer>
   </div>
 </div>
