--- a/src/app/trello/board-view/board-view.component.scss
+++ b/src/app/trello/board-view/board-view.component.scss
@@ -410,5 +410,9 @@ h1.app-name {
 .span-upload-file-card:hover {
   border: 1.5px solid #AAAAAA;
 }
+//.modal-card {
+//  margin-left: auto;
+//  margin-top: 250px;
+//}
 
 
