--- a/src/app/share/navbar/navbar.component.html
+++ b/src/app/share/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="nav">
   <span class="icon-item">
-      <a routerLink="/" class="icon-link"><i class="fas fa-home"></i></a>
+      <a routerLink="/trello" class="icon-link"><i class="fas fa-home"></i></a>
   </span>
 <!--  <div id="search-section">-->
 <!--    <div style="position: relative" id="search-results">-->
